# ts-package-repro

./: .gitignore  .prettierignore  .prettierrc  BUILD.bazel  README.md  WORKSPACE  package.json  rollup.config.js
src/: BUILD.bazel  greeting.ts
